--- a/style/screen-game.scss
+++ b/style/screen-game.scss
@@ -1,9 +1,9 @@
-@use "./colors.scss";
+@use "./sizes.scss";
 
 .screen.game-display {
   display: grid;
-  grid-template-columns: 1fr colors.$stack-width calc(
-      colors.$stack-margin-right + colors.$inset-right
+  grid-template-columns: 1fr sizes.$stack-width calc(
+      sizes.$stack-margin-right + sizes.$inset-right
     );
   grid-template-rows: 2fr min-content 2fr;
   grid-template-areas:
@@ -44,13 +44,13 @@
 }
 
 .dropout-menu {
-  $dropout-outer-padding: calc(0.25 * colors.$button-scale);
-  $dropout-inner-padding: calc(0.2 * colors.$button-scale);
-  $dropout-outer-border-radius: calc(0.75 * colors.$button-scale);
+  $dropout-outer-padding: calc(0.25 * sizes.$button-scale);
+  $dropout-inner-padding: calc(0.2 * sizes.$button-scale);
+  $dropout-outer-border-radius: calc(0.75 * sizes.$button-scale);
 
   position: absolute;
-  right: colors.$button-right;
-  top: colors.$button-top;
+  right: sizes.$button-right;
+  top: sizes.$button-top;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -306,7 +306,7 @@
     display: grid;
     grid-template-columns: 5vw 60vw 1fr;
     grid-template-rows: 1fr max(20vw, 40px) calc(
-        colors.$stack-margin-bottom + colors.$inset-bottom
+        sizes.$stack-margin-bottom + sizes.$inset-bottom
       );
     grid-template-areas:
       "main-grid main-grid main-grid"
