Use CSS transition for dark-mode switch.

--- a/style/base.scss
+++ b/style/base.scss
@@ -36,6 +36,8 @@ body {
   -webkit-user-select: none;
   user-select: none;
   touch-action: none;
+
+  transition: background-color 50ms;
 }
 
 svg {
