--- a/style/components.scss
+++ b/style/components.scss
@@ -53,6 +53,8 @@
   box-shadow: inset 0 0 40px rgb(0 0 0 / 20%);
   background: var(--main-bg-color);
 
+  transition: background-color 50ms;
+
   animation-name: animate-appear;
   animation-delay: 100ms;
   animation-duration: 500ms;
