Redesign setup menu.

--- a/style/base.scss
+++ b/style/base.scss
@@ -28,6 +28,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Barlow", sans-serif;
+  font-size: sizes.$font-size;
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   -khtml-user-select: none;
