--- a/style/components.scss
+++ b/style/components.scss
@@ -5,15 +5,15 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  padding: 10px calc(10px + sizes.$inset-right) calc(10px + sizes.$inset-bottom)
-    calc(10px + sizes.$inset-left);
+  padding: 18px calc(18px + sizes.$inset-right) calc(18px + sizes.$inset-bottom)
+    calc(18px + sizes.$inset-left);
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
   color: var(--footer-version-color);
-  font-size: 12px;
+  font-size: min(18px, 150%);
 
   p {
     color: var(--footer-version-color);
