--- a/style/screen-setup.scss
+++ b/style/screen-setup.scss
@@ -82,8 +82,8 @@ $setting-row-option-height: max(
   justify-self: center;
 }
 .screen.game-setup .game-button.play {
-  width: calc(1.5 * $setting-row-option-scale);
-  height: calc(1.5 * $setting-row-option-scale);
+  width: min(12vh, max(10vw, 10vh));
+  height: min(12vh, max(10vw, 10vh));
   padding: 10px;
   border-radius: 100%;
   background: var(--setup-play-button-bg-color);
@@ -128,7 +128,7 @@ $setting-row-option-height: max(
   .setting-row {
     position: relative;
     margin: 0.6em min(3vw, 2vh);
-    min-height: calc(3.5em + $setting-row-option-height);
+    min-height: calc(4.5em + $setting-row-option-height);
   }
   .setting-row h3 {
     grid-column: span 2;
@@ -151,20 +151,20 @@ $setting-row-option-height: max(
     width: max(130%, min(180%, calc(12 * $setting-row-option-scale)));
   }
   .setting-row .dropdown {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
     justify-items: stretch;
     align-content: flex-start;
-    border-radius: calc(0.1 * $setting-row-option-scale);
+    grid-template-columns: 1fr 1fr;
+    column-gap: calc(0.1 * $setting-row-option-scale);
+    row-gap: calc(0.1 * $setting-row-option-scale);
+    border-radius: calc(0.4 * $setting-row-option-scale);
     background: var(--settings-option-panel-bg-color);
     box-shadow: var(--dropdown-box-shadow);
+    padding: calc(0.1 * $setting-row-option-scale);
+    box-sizing: content-box;
   }
   .setting-row.open .dropdown-wrap {
     display: block;
-  }
-  .setting-row .dropdown .setting-row-option {
-    width: 50%;
   }
   .setting-row.count2,
   .setting-row.count3,
@@ -173,10 +173,16 @@ $setting-row-option-height: max(
       width: 100%;
     }
     .dropdown {
-      flex-direction: column;
-      flex-wrap: nowrap;
-      .setting-row-option {
+      grid-template-columns: 1fr;
+    }
+  }
+  @media screen and (min-aspect-ratio: 4/5) and (max-aspect-ratio: 8/5) {
+    .setting-row:nth-child(even) {
+      .dropdown-wrap {
         width: 100%;
+      }
+      .dropdown {
+        grid-template-columns: 1fr;
       }
     }
   }
@@ -186,16 +192,15 @@ $setting-row-option-height: max(
     grid-template-areas:
       "example description"
       "example description";
-    grid-template-columns: calc(0.76 * $setting-row-option-scale) 1fr;
+    grid-template-columns: $setting-row-option-scale 1fr;
     grid-template-rows: 1fr 1fr;
     column-gap: calc(0.2 * $setting-row-option-scale);
     align-items: center;
     padding-left: calc(0.1 * $setting-row-option-scale);
-    width: 100%;
     min-height: $setting-row-option-height;
     background: var(--settings-option-panel-bg-color);
-    border: 3px solid transparent;
-    border-radius: calc(0.1 * $setting-row-option-scale);
+    border: 2px solid transparent;
+    border-radius: calc(0.4 * $setting-row-option-scale);
     box-sizing: border-box;
     cursor: pointer;
     transition: transform 0.1s;
@@ -207,6 +212,8 @@ $setting-row-option-height: max(
   }
   .setting-row-option.current {
     box-shadow: var(--button-box-shadow);
+    margin: 0;
+    padding: calc(0.2 * $setting-row-option-scale);
   }
   .setting-row-option .wrap-grid,
   .setting-row-option > svg {
@@ -226,7 +233,7 @@ $setting-row-option-height: max(
   }
   .setting-row-option.selected,
   .setting-row-option.selected:hover {
-    border: 3px solid var(--settings-option-panel-border-active-color);
+    border: 2px solid var(--settings-option-panel-border-active-color);
     background: var(--settings-option-panel-bg-active-color);
   }
   circle.checkmark {
@@ -252,16 +259,20 @@ $setting-row-option-height: max(
   }
 
   .screen.game-setup h2 {
-    margin: 1.2em calc(min(3vw, 2vh) + 0.1 * $setting-row-option-scale);
+    margin: 0.6em calc(min(3vw, 2vh) + 0.1 * $setting-row-option-scale);
   }
 
   .screen.game-setup .settings {
-    min-height: 40vh;
+    min-height: max(40vh, calc(10 * $setting-row-option-height));
     padding-left: calc(sizes.$stack-margin-left + sizes.$inset-left);
   }
 
+  .screen.game-setup .setting-row {
+    min-height: calc(3.5em + $setting-row-option-height);
+  }
+
   .screen.game-setup .game-button.play {
-    width: calc(2 * $setting-row-option-scale);
-    height: calc(2 * $setting-row-option-scale);
+    width: min(15vw, max(10vw, 10vh));
+    height: min(15vw, max(10vw, 10vh));
   }
 }
