--- a/style/colors.scss
+++ b/style/colors.scss
@@ -7,7 +7,11 @@ $blue: hsl(214deg, 64%, 50%);
 :root {
   // main backgrounds
   --main-bg-color: #{color.change($maintint, $lightness: 87%)};
-  --panel-bg-color: #{color.change($maintint, $lightness: 70%)};
+  --panel-bg-color: #{color.change(
+      $maintint,
+      $lightness: 70%,
+      $saturation: 15%
+    )};
   --dropout-bg-color: #{color.change($maintint, $lightness: 95%)};
 
   // COMPONENTS
@@ -21,15 +25,46 @@ $blue: hsl(214deg, 64%, 50%);
   --toggle-threeway-icon-enabled-color: var(--dropout-bg-color);
 
   // button colors
-  --button-fg-color: rgba(0, 0, 0, 35%);
+  --button-fg-color: #{color.change(
+      $maintint,
+      $lightness: 30%,
+      $saturation: 25%,
+      $alpha: 60%
+    )};
   --button-bg-color: rgba(0, 0, 0, 8%);
-  --button-bg-pressed-color: rgba(0, 0, 0, 15%);
-  --button-bg-hover-color: rgba(0, 0, 0, 25%);
-  --button-bg-selected-color: rgba(0, 0, 0, 70%);
+  --button-bg-color: #{color.change(
+      $maintint,
+      $lightness: 30%,
+      $saturation: 25%,
+      $alpha: 12%
+    )};
+  --button-bg-pressed-color: #{color.change(
+      $maintint,
+      $lightness: 30%,
+      $saturation: 25%,
+      $alpha: 24%
+    )};
+  --button-bg-hover-color: #{color.change(
+      $maintint,
+      $lightness: 30%,
+      $saturation: 25%,
+      $alpha: 32%
+    )};
+  --button-bg-selected-color: #{color.change(
+      $maintint,
+      $lightness: 30%,
+      $saturation: 25%,
+      $alpha: 80%
+    )};
 
   // large play button in the setup screen
   --setup-play-button-bg-color: #{color.change($green, $lightness: 32%)};
-  --setup-play-button-bg-disabled-color: rgba(0, 0, 0, 10%);
+  --setup-play-button-bg-disabled-color: #{color.change(
+      $maintint,
+      $lightness: 30%,
+      $saturation: 25%,
+      $alpha: 12%
+    )};
   --setup-play-button-fg-color: #{color.change($green, $lightness: 95%)};
   --setup-play-button-fg-disabled-color: rgba(255, 255, 255, 30%);
 
@@ -67,6 +102,7 @@ $blue: hsl(214deg, 64%, 50%);
 
   // warning symbol for invalid grid in setup menu
   --invalid-grid-warning-color: #e06300;
+  --undefined-tile-color: hsl(0deg, 0%, 50%);
 
   // GAME SCREEN
 
