--- a/style/grid-display.scss
+++ b/style/grid-display.scss
@@ -13,6 +13,10 @@
   transition-duration: 400ms;
 }
 
+.svg-tile {
+  fill: var(--undefined-tile-color);
+}
+
 .svg-placeholder {
   fill: var(--placeholder-fill-color);
   stroke: var(--placeholder-stroke-color);
